# jax

./: CHANGELOG.md
examples/ffi/: pyproject.toml
jax/: core.py
jax/_src/: array.py  callback.py  config.py  core.py  mesh.py
jax/_src/clusters/: cloud_tpu_cluster.py
jax/_src/export/: _export.py
jax/_src/internal_test_util/: export_back_compat_test_util.py
jax/_src/interpreters/: ad.py  batching.py  partial_eval.py  pxla.py
jax/_src/lax/: lax.py
jax/_src/lib/: __init__.py
jax/_src/pallas/: pallas_call.py
jax/_src/pallas/mosaic/: lowering.py
jax/_src/pallas/mosaic_gpu/: lowering.py  primitives.py
jax/experimental/: shard_map.py
jax/experimental/colocated_python/: func.py  serialization.py
jax/experimental/jax2tf/: jax2tf.py
jax/experimental/jax2tf/examples/tf_js/quickdraw/: input_pipeline.py
jax/experimental/jax2tf/tests/: jax2tf_test.py  shape_poly_test.py
jax/experimental/pallas/: mosaic_gpu.py
jax/lax/: linalg.py
jax/tools/: build_utils.py  pgo_nsys_converter.py
jaxlib/: jax.bzl
jaxlib/mosaic/dialect/tpu/transforms/: apply_vector_layout.cc
jaxlib/tools/: BUILD.bazel  build_wheel_test.py
tests/: BUILD  colocated_python_test.py  export_back_compat_test.py  garbage_collection_guard_test.py  memories_test.py  shape_poly_test.py
tests/pallas/: mosaic_gpu_test.py  ops_test.py  tpu_pallas_test.py
