[build-system]
requires = ["scikit-build-core", "nanobind", "jax>=0.4.31"]
build-backend = "scikit_build_core.build"

[project]
name = "jax_ffi_example"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = ["jax", "security==1.3.1"]

[project.optional-dependencies]
test = ["pytest", "absl-py"]
